# bluebox

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  bluebox.service  config.toml
.github/workflows/: ci.yml  release-binaries.yml  release-docker.yml
benches/: blocker.rs  packet.rs
debian/: postinst  postrm
src/: config.rs  error.rs  lib.rs  main.rs  metrics.rs  server.rs
src/blocklist/: adblock.rs  domains.rs  hosts.rs  loader.rs  manager.rs  mod.rs  remote.rs
src/cache/: dns_cache.rs  mod.rs
src/dns/: blocker.rs  mod.rs  resolver.rs
src/network/: arp.rs  buffer.rs  capture.rs  forward.rs  mod.rs  packet.rs
tests/: e2e_forwarding.rs  integration.rs
