[package]
name = "bluebox"
version = "0.1.4"
edition = "2024"
description = "A fast DNS interceptor and cache for local networks"
license = "MIT"
repository = "https://github.com/jeremie/bluebox"
keywords = ["dns", "network", "cache", "blocking"]
categories = ["network-programming"]

[dependencies]
# Error handling
anyhow = "1.0"
thiserror = "2.0"

# DNS protocol
hickory-proto = "0.25"

# Caching
moka = { version = "0.12", features = ["future"] }

# Networking
pnet = "0.35"

# Serialization
serde = { version = "1.0", features = ["derive"] }
toml = "1.0"

# Async runtime
tokio = { version = "1.38", features = ["full"] }

# Logging/Tracing
tracing = "0.1"
tracing-subscriber = "0.3"

# Metrics
metrics = "0.24"
metrics-exporter-prometheus = "0.18"

# Synchronization (faster than std)
parking_lot = "0.12"

# HTTP client for remote blocklist fetching
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip"] }

# Platform-specific cache directories
dirs = "6.0"

[dev-dependencies]
# Property-based testing
proptest = "1.10"

# Benchmarking
criterion = { version = "0.8", features = ["html_reports"] }

# Test utilities
tokio-test = "0.4"
tempfile = "3.25"

# Mock HTTP server for testing remote loader
wiremock = "0.6"

[[bench]]
name = "blocker"
harness = false

[[bench]]
name = "packet"
harness = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
lto = true
codegen-units = 1

[package.metadata.deb]
maintainer = "Jeremie Drouet <jeremie.drouet@gmail.com>"
section = "net"
priority = "optional"
conf-files = ["/etc/bluebox/config.toml"]
assets = [
    ["target/release/bluebox", "usr/bin/", "755"],
    ["config.toml", "etc/bluebox/config.toml", "644"],
    ["bluebox.service", "lib/systemd/system/bluebox.service", "644"],
]
maintainer-scripts = "debian/"
extended-description = """Bluebox is a fast DNS interceptor and cache designed for local networks.
It provides DNS caching and domain blocking capabilities with high performance."""

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# Allow some pedantic lints that are too noisy
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
